# smtp-server

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  README.md  build.sh  compose.yaml  config.h  config.txt  main.cpp  parser.h  server.crt  server.csr  server.key
html/: Base64_8h_source.html  CommandHandler_8h_source.html  Deque_8h_source.html  IMailDB_8h_source.html  JSONParser_8h_source.html  Logger_8h_source.html  MXResolver_8h_source.html  MailAddress_8h_source.html  MailAttachment_8h_source.html  MailException_8h_source.html  MailMessageBuilder_8h_source.html  MailMessageFormatter_8h_source.html  MailMessage_8h_source.html  PgMailDB_8h_source.html  ServerConfig_8h_source.html  ServerInitializer_8h_source.html  Server_8h_source.html  SignalHandler_8h_source.html  SocketWrapper_8h_source.html  StandartSmtpResponses_8h_source.html  TcpSocketManager_8h_source.html  ThreadPool_8h_source.html  ThreadSafeQueue_8h_source.html  TlsSocketManager_8h_source.html  annotated.html  classConfig-members.html  classConfig.html  classISXCommandHandler_1_1CommandHandler-members.html  classISXCommandHandler_1_1CommandHandler.html  classISXMM_1_1MailAddress-members.html  classISXMM_1_1MailAddress.html  classISXMM_1_1MailAttachment-members.html  classISXMM_1_1MailAttachment.html  classISXMM_1_1MailMessageBuilder-members.html  classISXMM_1_1MailMessageBuilder.html  classISXMailDB_1_1IMailDB-members.html  classISXMailDB_1_1IMailDB.html  classISXMailDB_1_1IMailDB__coll__graph.dot  classISXMailDB_1_1IMailDB__inherit__graph.dot  classISXMailDB_1_1MailException-members.html  (+147 more)
html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  concepts_0.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  (+3 more)
include/: Base64.h  Logger.h  LoggerTestUtilities.h  MailAddress.h  MailAttachment.h  MailMessage.h  MailMessageBuilder.h  Server.h  SignalHandler.h  SocketWrapper.h
include/CommandHandler/: CMakeLists.txt
include/CommandHandler/include/: AccessTokenFetcher.h  CommandHandler.h  MXResolver.h  MailMessageForwarder.h  StandartSmtpResponses.h
include/CommandHandler/src/: AccessTokenFetcher.cpp  CommandHandler.cpp  MXResolver.cpp  MailMessageSender.cpp  StandartSmtpResponses.cpp
include/DataBase/: .gitignore
include/DataBase-main/: .gitignore  CMakeLists.txt  CMakePresets.json  Documentation.md  README.md
include/DataBase-main/libs/MailDB/: CMakeLists.txt
include/DataBase-main/libs/MailDB/include/MailDB/: IMailDB.h  MailException.h  PgMailDB.h
include/DataBase-main/libs/MailDB/src/: PgMailDB.cpp
include/DataBase-main/src/: main.cpp
include/DataBase-main/test/: db_insert_dummy_data.txt  db_table_creation.txt  test.cpp
include/DataBase/DataBase-main/: CMakeLists.txt  Documentation.md  README.md
include/DataBase/DataBase-main/libs/MailDB/: CMakeLists.txt
include/DataBase/DataBase-main/libs/MailDB/include/MailDB/: IMailDB.h  PgMailDB.h
include/DataBase/DataBase-main/libs/MailDB/src/: PgMailDB.cpp
include/DataBase/MailDB/: CMakeLists.txt
include/DataBase/MailDB/include/MailDB/: ConnectionPool.h  ConnectionPoolWrapper.h  EmailsInstance.h  IMailDB.h  MailException.h  PgEmailsWriter.h  PgMailDB.h  PgManager.h
include/DataBase/MailDB/src/: IMailDB.cpp  PgEmailsWriter.cpp  PgMailDB.cpp  PgManager.cpp
include/DataBase/MailDB/test/: CMakeLists.txt  CacheTest.h  ConnPoolPqxxTest.h  DatabaseFixture.h  PgMailDBTest.h  Utils.h  db_table_creation.txt  test.cpp
include/Encoding/: CMakeLists.txt
include/Encoding/include/: Base64.h
include/Encoding/src/: Base64.cpp
include/ErrorHandler/: CMakeLists.txt
include/ErrorHandler/include/: ErrorHandler.h
include/Logger/: CMakeLists.txt  README.md  serverlog.txt
include/Logger/include/: Logger.h
include/Logger/src/: Logger.cpp
include/Logger/tests/: CMakeLists.txt  TestLogger.cpp
include/MIMEParser/: CMakeLists.txt
include/MIMEParser/include/: MIMEParser.h
include/MIMEParser/src/: MIMEParser.cpp
include/MailMessage/: CMakeLists.txt
include/MailMessageFormatter/: CMakeLists.txt
include/Parser/: CMakeLists.txt
include/Parser/include/: JSONParser.h  ServerConfig.h  config.h  parser.h
include/Parser/src/: JSONParser.cpp  ServerConfig.cpp
include/Parser/tests/: ParserTests.cpp
include/Server/: CMakeLists.txt
include/Server/include/: Server.h  ServerInitializer.h
include/Server/include/ClientSession/: CMakeLists.txt
include/Server/include/ClientSession/include/: ClientSession.h  SmtpRequest.h  SmtpResponse.h
include/Server/include/ClientSession/src/: ClientSession.cpp  SmtpRequest.cpp  SmtpResponse.cpp
include/Server/src/: Server.cpp  ServerInitializer.cpp
include/SignalHandler/: CMakeLists.txt
include/SignalHandler/include/: SignalHandler.h
include/SignalHandler/src/: SignalHandler.cpp
include/SocketWrapper/: CMakeLists.txt
include/SocketWrapper/include/: SocketWrapper.h  TcpSocketManager.h  TlsSocketManager.h
include/SocketWrapper/src/: SocketWrapper.cpp  TcpSocketManager.cpp  TlsSocketManager.cpp
include/Utils/: CMakeLists.txt
include/Utils/BoostLockfree/: tagged_ptr_pair.hpp
include/Utils/include/: Base64.h  ThreadPool.h  ThreadSafeQueue.h
scripts/: build.sh  install.sh  start.sh
src/: Base64.cpp  Logger.cpp  Logger.h  MailAddress.cpp  MailAttachment.cpp  MailMessageBuilder.cpp  Server.cpp  main.cpp
tests/: TestLogger.cpp  TestsLogger.cpp
